// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui:create:atomic when using an existing pageId (--pageId flag specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "svywi4m+5JDQ38UPkngnE1Mjtdo=",
                  "name": "areEnvironmentVariablesSet.ts",
                },
                HashedFile {
                  "hash": "qJrXPWX6cL4N+TMvhr6+n05vNwk=",
                  "name": "generateToken.ts",
                },
                HashedFile {
                  "hash": "AG8M1wAglfYRRL/+Y987D25+YcA=",
                  "name": "token.spec.ts",
                },
                HashedFile {
                  "hash": "LxpAYAmM+yDe4mLtd3Rj6R9S30k=",
                  "name": "token.ts",
                },
              ],
              "hash": "qIYVWdq8oh9lCcu0H1X5XfQchcU=",
              "name": "token",
            },
          ],
          "hash": "sBgXQK+6u5b7XzuUi8zQquqUtaU=",
          "name": "functions",
        },
        HashedFile {
          "hash": "qBh2kK6C/tcpIA4kKT8j7bm10Kw=",
          "name": "jest.config.js",
        },
        HashedFile {
          "hash": "Q5B4b7qfWLJaHE/TZpt/2vLRgUk=",
          "name": "LICENSE",
        },
        HashedFile {
          "hash": "3RItgq2aQ177ZrvBxVNrLLaaRLc=",
          "name": "netlify.toml",
        },
        HashedFile {
          "hash": "JcgnYZDTiQ6EqMwKIuEh9x+kLlA=",
          "name": "README.md",
        },
        HashedFile {
          "hash": "RmeGeAs5hovLIHxguToYky0yJDY=",
          "name": "tsconfig.json",
        },
      ],
      "hash": "MVuHWG3A8rTxFYXfcqRQA/UkK7s=",
      "name": "lambda",
    },
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "yYnkMNFHBU75Q1vjLZNnBzeTT94=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "UToKXYP7QMQqwNGjWlXxvQC5n/Q=",
                  "name": "template-1.html",
                },
              ],
              "hash": "TBhnmXBlTTD0uS57sAy/ClXcfG4=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "vgtDa2FVnWYn9t5C1jG63Pdz7hA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "X9NLRdpTye/6iMyj9Y0ddiaI53Y=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "j2/Y4dEB9vQhiRQpZDP+O32d1yY=",
          "name": "components",
        },
        HashedFile {
          "hash": "2/Ssowtzkh/hx4e9vrMi11FFp1Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "hlBUDBUrW6Vub74g68bUqfs3OIM=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "61GVF7l8bCVXW00H2rtInTKwoqY=",
              "name": "index.css",
            },
          ],
          "hash": "FQZ6fv/Z/8DhwZWuUbrLwgTt6r8=",
          "name": "style",
        },
      ],
      "hash": "5Sva7Vq7EY46mMhGfL90ELhMWPY=",
      "name": "src",
    },
    HashedFile {
      "hash": "jVuOZ6BrKT9HUer88GsGfeySq/w=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "uP/pVsW9mwmxCLG+4xF/lAQoqlo=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing pageId (using the list prompt of available pages) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "Jy9yA5W89BgTcZN4pVbSygA3w9U=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "8HGPil/NJ96KWhjo/uk9JBaq9us=",
          "name": "setup-lambda.mjs",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "0DHKkhnIXmyyA6198J3HAA9T0C0=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "825kP1s1AjeW6LxFVkzMpo89ocw=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "o3HO4XHkT+eWGdwQs9Vd/0evcU4=",
                  "name": "template-1.html",
                },
              ],
              "hash": "y1rWovg+gqLwUrWSz8SCjmEanGw=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "BmxCGos0rMicK/0OnfggnN3LfjA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "xXlKrMsYuYL84uzxUsvWSINRar0=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "PyAhS46kIM+56HBW7RpNkhTAqD0=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "VYQYwWUyFPlPYQDod3YJsXVOEiQ=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "ygdkeGA2hXdvtcqJyetblv/fdrw=",
              "name": "index.css",
            },
          ],
          "hash": "lRdUDVao1PTEjkh/JyuWMC0NvKk=",
          "name": "style",
        },
      ],
      "hash": "m5ExEuYjubG6JdFM+3txDoyIXDY=",
      "name": "src",
    },
    HashedFile {
      "hash": "XRdANxlMd+KVd0HuNLxu+WqpRu0=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "yN74X4FZ/Uo/a9tcBxwM9Fpd/AY=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using the default page config (pageId not specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "RH58BiYWbvwHsjuAvGykfQPEhA0=",
      "name": "netlify.toml",
    },
    HashedFile {
      "hash": "tsB6RnquGXxlrZaz2ywGjnCeWfA=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "Jy9yA5W89BgTcZN4pVbSygA3w9U=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "8HGPil/NJ96KWhjo/uk9JBaq9us=",
          "name": "setup-lambda.mjs",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "0DHKkhnIXmyyA6198J3HAA9T0C0=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "X8T+MmiPJFNu/lwXh6d29i/YhYo=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "OMU1pEfGxxywcokm8aFD8znPyaI=",
                  "name": "template-1.html",
                },
              ],
              "hash": "W1lEfKcMoS9W1dKtbS/qCjUkWkQ=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "BmxCGos0rMicK/0OnfggnN3LfjA=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "xXlKrMsYuYL84uzxUsvWSINRar0=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "v5QsIbKPhqUjN5T705ILECqNNNg=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "VYQYwWUyFPlPYQDod3YJsXVOEiQ=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "Dp2EpyDmwkxrxWxZxv0cM41ulEs=",
              "name": "index.css",
            },
          ],
          "hash": "aAm3g7fNVc/yWUitXMGFxqC9GIg=",
          "name": "style",
        },
      ],
      "hash": "DgwSDd7NKuEP9HKGZtLTMpgeU54=",
      "name": "src",
    },
    HashedFile {
      "hash": "XRdANxlMd+KVd0HuNLxu+WqpRu0=",
      "name": "start-netlify.mjs",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "1ktzW6z31O95vrmeruX0xMYNAno=",
  "name": "normalizedDir",
}
`;
